2007-12-16  Franz Holzinger  <kontakt@fholzinger.com>
	* remove dependancy from div extension
	* new feature charset: extension setup for the character set of the tables
	* fix bug with wrong '1 AND ...' SQL query with itemsProcFunc_config.hotlistOnly
	* change Galician language
	* fix bug 4589 with wrong SQL when no country code is available
	* new feature: mutliple countries and languages can be selected at once

2007-08-03  David Bruehlmeier <typo3@bruehlmeier.com> 
	* Updated static_markets

2007-07-17  Franz Holzinger  <kontakt@fholzinger.com>
	* new function fetchCountries to get a list of countries which match the parameters

2007-06-19  David Bruehlmeier <typo3@bruehlmeier.com> 
	* Updated static_markets

2007-06-16  Franz Holzinger  <kontakt@fholzinger.com>
	* support for custom where clauses with static_info_tables by Jeff Segars
	* fix bug #5616: hook function processDatamap_postProcessFieldArray must not use $this as parameter name

2007-05-22  David Bruehlmeier <typo3@bruehlmeier.com> 
	* Updated static_markets

2007-05-16  David Bruehlmeier <typo3@bruehlmeier.com> 
	* Added static_markets to $TYPO3_CONF_VARS['EXTCONF'][STATIC_INFO_TABLES_EXTkey]['tables']

2007-04-24  Franz Holzinger  <kontakt@fholzinger.com>
	* adapt manual for market places

2007-04-14  Franz Holzinger  <kontakt@fholzinger.com>
	* small modifications using constants

2007-04-03  David Bruehlmeier <typo3@bruehlmeier.com> 
	* Fixed small bug in selectItemsTCA()
	* Added new table 'static_markets' (regulated by ISO 10383)

2007-01-13  Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug with wrong SQL query with "SELECT static_countries.cn_iso_3, FROM ..."

2006-11-23  Franz Holzinger  <kontakt@fholzinger.com>
	* fix bug with wrong SQL query with "... AND static_country_zones.=''"

2006-10-31  Franz Holzinger  <kontakt@fholzinger.com>
	* change the param into an addWhere parameter where it is a WHERE clause

2006-10-11  Franz Holzinger  <kontakt@fholzinger.com>